package sdk

import (
	"context"
	"fmt"
	"time"
)

// AnalyticsClient provides analytics and reporting operations
type AnalyticsClient struct {
	// client  interface{} // TODO: Implement when proto types are available
	timeout time.Duration
}

// GetMetricsOverview retrieves fleet metrics overview
func (c *AnalyticsClient) GetMetricsOverview(ctx context.Context, opts GetMetricsOverviewOptions) (interface{}, error) {
	return nil, fmt.Errorf("analytics client not implemented")
}

// QueryMetrics queries time-series metrics
func (c *AnalyticsClient) QueryMetrics(ctx context.Context, opts QueryMetricsOptions) (interface{}, error) {
	return nil, fmt.Errorf("analytics client not implemented")
}

// GetDeviceMetrics retrieves metrics for a specific device
func (c *AnalyticsClient) GetDeviceMetrics(ctx context.Context, opts GetDeviceMetricsOptions) (interface{}, error) {
	return nil, fmt.Errorf("analytics client not implemented")
}

// GetAggregatedMetrics retrieves aggregated metrics
func (c *AnalyticsClient) GetAggregatedMetrics(ctx context.Context, opts GetAggregatedMetricsOptions) (interface{}, error) {
	return nil, fmt.Errorf("analytics client not implemented")
}

// GenerateReport generates an analytics report
func (c *AnalyticsClient) GenerateReport(ctx context.Context, opts GenerateReportOptions) (interface{}, error) {
	return nil, fmt.Errorf("analytics client not implemented")
}

// GetAlerts retrieves alerts
func (c *AnalyticsClient) GetAlerts(ctx context.Context, opts GetAlertsOptions) (interface{}, error) {
	return nil, fmt.Errorf("analytics client not implemented")
}

// CreateAlertRule creates an alert rule
func (c *AnalyticsClient) CreateAlertRule(ctx context.Context, opts CreateAlertRuleOptions) (interface{}, error) {
	return nil, fmt.Errorf("analytics client not implemented")
}

// GetDeviceLogs retrieves logs for a specific device
func (c *AnalyticsClient) GetDeviceLogs(ctx context.Context, opts GetDeviceLogsOptions) (interface{}, error) {
	return nil, fmt.Errorf("analytics client not implemented")
}

// SearchLogs searches across device logs
func (c *AnalyticsClient) SearchLogs(ctx context.Context, opts SearchLogsOptions) (interface{}, error) {
	return nil, fmt.Errorf("analytics client not implemented")
}

// Options types

// GetMetricsOverviewOptions contains options for getting metrics overview
type GetMetricsOverviewOptions struct {
	OrganizationID string
	TimeRange      *TimeRange
	GroupIDs       []string
}

// QueryMetricsOptions contains options for querying metrics
type QueryMetricsOptions struct {
	Query       string
	TimeRange   *TimeRange
	StepSeconds int32
}

// GetDeviceMetricsOptions contains options for getting device metrics
type GetDeviceMetricsOptions struct {
	DeviceID          string
	MetricNames       []string
	TimeRange         *TimeRange
	ResolutionSeconds int32
}

// GetAggregatedMetricsOptions contains options for getting aggregated metrics
type GetAggregatedMetricsOptions struct {
	DeviceIDs         []string
	GroupIDs          []string
	MetricNames       []string
	TimeRange         *TimeRange
	Aggregation       AggregationType
	BucketSizeSeconds int32
}

// GenerateReportOptions contains options for generating reports
type GenerateReportOptions struct {
	Name      string
	Type      ReportType
	TimeRange *TimeRange
	DeviceIDs []string
	GroupIDs  []string
	Format    ReportFormat
}

// GetAlertsOptions contains options for getting alerts
type GetAlertsOptions struct {
	OrganizationID string
	Severities     []AlertSeverity
	DeviceIDs      []string
	ActiveOnly     bool
	PageSize       int32
	PageToken      string
}

// CreateAlertRuleOptions contains options for creating alert rules
type CreateAlertRuleOptions struct {
	Name                 string
	Description          string
	Condition            string
	Severity             AlertSeverity
	DurationSeconds      int32
	NotificationChannels []string
	Labels               map[string]string
}

// GetDeviceLogsOptions contains options for getting device logs
type GetDeviceLogsOptions struct {
	DeviceID  string
	TimeRange *TimeRange
	Levels    []LogLevel
	Limit     int32
}

// SearchLogsOptions contains options for searching logs
type SearchLogsOptions struct {
	Query     string
	TimeRange *TimeRange
	DeviceIDs []string
	Levels    []LogLevel
	PageSize  int32
	PageToken string
}
